infra/gitops/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: split-bill-dev-deployment
  namespace: split-bill-dev
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: summer-workshop-split-bill
          image: ghcr.io/secretlabrat/splitbill-backend:8ab48ffbd560c9218e6a21790783e2090c7aacec
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /v1/healthcheck
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /v1/healthcheck
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 20
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "0.5"
              memory: 256Mi
            requests:
              cpu: "0.25"
              memory: 128Mi
