infra/gitops/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spilt-bill-dev-service
  namespace: spilt-bill-dev
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: api
  type: ClusterIP
